Bug 154734 - XML Form Document: All binded fields will be shown as fields with wrong content - except fields, which have wrong content.
Summary: XML Form Document: All binded fields will be shown as fields with wrong conte...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
: 154324 (view as bug list)
Depends on:
Blocks: XML_Form
  Show dependency treegraph
 
Reported: 2023-04-09 18:02 UTC by Robert Großkopf
Modified: 2023-04-27 08:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2023-04-09 18:02:07 UTC
Download https://bugs.documentfoundation.org/attachment.cgi?id=186554 and open the document.
There are some fields (numeric) which couldn't get bindings with LO 7.3.0.3 or newer.
All fields, which have a binding to data, will be shown as fields with "wrong content" (red line). Only field for Boolean, which has also a binding, won't show this. But this field has wrong content. Has to be '1' or '0' instead, but is empty.

Open the same document in LO 7.2.5.2 and fields will be shown right.
Might be this bug has been introduce with the same code as bug 154728
Comment 1 Julien Nabet 2023-04-10 13:12:36 UTC
This one should be fixed too with the fix of tdf#154658
Comment 2 Robert Großkopf 2023-04-12 07:18:14 UTC
This bug hasn't been fixed with bug 154658.
Now numeric fields are also shown as fields with "wrong content" - if content is right. And as right content, if content is wrong.

Test https://bugs.documentfoundation.org/attachment.cgi?id=186509 after creating the right bindings. Input decimal values in the first 2 fields and have a look at the wrong result, which is shown with black border.
Comment 3 Julien Nabet 2023-04-14 08:40:26 UTC
I'm not sure but it may be related to the localization of the decimal separator.
Anyway, I don't how to fix this.
If the bibisect request provides some info (I don't know how to do this too and the doc seems quite complicated/tedious too), I may take a look so for the moment unassign myself but myself in cc.
Comment 4 Buovjaga 2023-04-14 14:51:12 UTC
Bibisected with linux-64-7.3 to 14cfff500e93f0d6cbf8412065feea85c01ea81d
Pass context and resource string down to boost::locale separately
Comment 5 Julien Nabet 2023-04-14 19:12:48 UTC
(In reply to Buovjaga from comment #4)
> Bibisected with linux-64-7.3 to 14cfff500e93f0d6cbf8412065feea85c01ea81d
> Pass context and resource string down to boost::locale separately

Great job!
I've submitted a patch here:
https://gerrit.libreoffice.org/c/core/+/150433

It was unrelated to decimal separator.

With this fix, fields show as valid but as soon as you play with decimal containing numbers different of 0 after decimal sep, it fails.
Comment 6 Commit Notification 2023-04-14 20:58:55 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4829a85d0753c93419bd46b1d50bcfa6f0f3f1da

tdf#154734: XML Form doc: all binded fields will be shown as fields...

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2023-04-14 21:09:06 UTC
Cherry-pick for 7.5 branch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/150326
Comment 8 Commit Notification 2023-04-17 07:47:52 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/0cfac0def1ec3835df63a698291b9dd0ec4a0ec2

tdf#154734: XML Form doc: all binded fields will be shown as fields...

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2023-04-20 08:35:08 UTC
*** Bug 154324 has been marked as a duplicate of this bug. ***
Comment 10 Robert Großkopf 2023-04-27 08:30:53 UTC
Tested with Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cb79692883e92de02d87b0662a431f6ff8fba9c8
CPU threads: 6; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

Will work now as expected.