tdf#154734: XML Form doc: all binded fields will be shown as fields...

with wrong content - except fields, which have wrong content

Regression of 14cfff500e93f0d6cbf8412065feea85c01ea81d (at 2021-08-05)
Pass context and resource string down to boost::locale separately
because this is often on a hot path, and we can avoid the splitting and
joining of strings like this.

Before the commit, it was:
return ( _validate( sValue ) == nullptr );

_validate methods return "TranslateId" variable which contain the reason why validity is wrong
so if this variable contains no reason it means everything is OK.

so just replace:
return bool(_validate( sValue ));
by:
return bool(!_validate( sValue ));

Change-Id: I76373d0825f86f9072217c96757252b6a891ecc4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150433
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
(cherry picked from commit 5b7eea73b961f6518c889fee2331f290b64473ee)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150326
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>